--- a/src/test/resources/common.properties
+++ b/src/test/resources/common.properties
@@ -1,2 +1,6 @@
 # URLs
 production.baseUrl = https://sportano.ua
+
+#Account Data
+UserEmail = 1stasmanko1@gmail.com
+UserPassword = ytfzk6_bWNqW8ab
