Test method loginViaInvalidEmail() created

--- a/src/test/resources/common.properties
+++ b/src/test/resources/common.properties
@@ -2,5 +2,5 @@
 production.baseUrl = https://sportano.ua
 
 #Account Data
-UserEmail = 1stasmanko1@gmail.com
-UserPassword = ytfzk6_bWNqW8ab
+UserEmail = benedictcoom123@gmail.com
+UserPassword = Sultan0187
